# gipc

./: .gitignore  BACKLOG.md  README.md  activetheory-design-analysis.md  concept-and-feature-design.md  design-system.md  kaveenk-design-analysis.md  package-lock.json  package.json  tech-stack.md  vps-hosting-research.md
.github/workflows/: ai.yml  web.yml  (+1 more)
career/: career-mcd.md  keywords-ai-ml-engineer.md  keywords-backend-engineer.md  keywords-devops-engineer.md
infra/: README.md
resume/: resume-master.md  resume.html  resume.json
scripts/: check-resume-drift.mjs  regen-resume.mjs
services/ai/: .dockerignore  Dockerfile  Dockerfile.dockerignore  pyproject.toml
services/ai/app/: budget.py  code_corpus.py  color.py  config.py  context.py  corpus.py  db.py  embedder.py  evals.py  grounding.py  infer.py  ingest.py  jd.py  limiter.py  llm.py  log.py  main.py  oracle.py  resume_evidence.py  retrieval.py  sse.py  theme.py  tools.py  turnstile.py  variant.py
services/ai/app/routes/: health.py  infer.py  jd.py  oracle.py  search.py  theme.py  variant.py
services/ai/corpus/: code-manifest.json  site.md
services/ai/evals/: gold-jd.json  gold-retrieval.json  results.json
services/ai/tests/: test_budget.py  test_code_corpus.py  test_color.py  test_config.py  test_context.py  test_corpus.py  test_evals.py  test_grounding.py  test_health.py  test_infer.py  test_jd.py  test_jd_route.py  test_limiter.py  test_oracle.py  test_resume_evidence.py  test_search.py  test_theme.py  test_theme_route.py  test_tools.py  test_turnstile.py  test_variant.py  test_variant_route.py
(+259 files in other folders)
